[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reformer"
version = "0.1.0"
description = "Transformer with RoPE implementation"
requires-python = ">=3.12"
dependencies = [
    "transformer-from-scratch @ git+https://github.com/henok3878/transformer-from-scratch.git",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]